website/websites/u32q/code/meteor.1.python3.log

Tue, 27 Jan 2009 04:19:05 GMT

MAKE:
mv meteor.python3 meteor.py
/usr/local/src/Python-3.0/python -OO -c "from py_compile import compile; compile('meteor.py')"
  File "meteor.py", line 46
    def floodFill(board, (x, y)):
                         ^
SyntaxError: invalid syntax

0.05s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.0/python meteor.pyo 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.0/python: can't open file 'meteor.pyo': [Errno 2] No such file or directory
